dando erro em Home

--- a/front-html/category.html
+++ b/front-html/category.html
@@ -54,7 +54,7 @@
             />
           </div>
 
-          <button type="submit" class="submit" id="submit" name="submit" onclick="postCategory()">Add Category</button>
+          <button type="submit" class="submit" id="submit" name="submit" onClick="postCategory()">Add Category</button>
         </form>
       </div>
       <hr class="division" />
